corrindo arquivo html

--- a/TabelaBaixos.html
+++ b/TabelaBaixos.html
@@ -3,7 +3,7 @@
 <head>
     <font face="arial"><title>Tabela comparativa de Contrabaixos</title>
         <meta charset="utf=8">
-</head><font color="purple" size="6"><h1 align="center">Tabela comparativa de Contrabaixos<br></h1></head></font>
+</head><font color="purple" size="6"><h1 align="center">Tabela Comparativa de Contrabaixos<br></h1></head></font>
 <b align="justify">Qual é a função do contrabaixo?</b><br><br>
 Sua função é conduzir a música, sempre impulsionando o entrosamento ideal com os demais instrumentos. Em qualquer estilo de música, o principal companheiro do baixo é o bateria. Poderia dizer que ele é o instrumento mais importante de qualquer banda, mas quero evitar as polêmicas por aqui!<br><br><br>
 Trago abaixo, uma tabela comparativa com três dos mais icônicos modelos de contrabaixos elétricos já criados e suas respectivas fichas técnicas:<br><br><br><br><br>
